# rust-multiplatform-experiments

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
TryUniffiRust/: xc-universal-binary.sh
TryUniffiRust/TryUniffiRust/: ContentView.swift  TryUniffiRustApp.swift
TryUniffiRust/TryUniffiRust.xcodeproj/: project.pbxproj
TryUniffiRust/TryUniffiRust.xcodeproj/project.xcworkspace/xcuserdata/klcantrell_mac.xcuserdatad/: UserInterfaceState.xcuserstate
TryUniffiRust/TryUniffiRust.xcodeproj/xcshareddata/xcschemes/: TryUniffiRust.xcscheme
TryUniffiRust/TryUniffiRust.xcodeproj/xcuserdata/klcantrell_mac.xcuserdatad/xcschemes/: xcschememanagement.plist
TryUniffiRustAndroid/: build.gradle  settings.gradle
TryUniffiRustAndroid/app/: build.gradle
TryUniffiRustAndroid/app/src/main/: AndroidManifest.xml
TryUniffiRustAndroid/gradle/wrapper/: gradle-wrapper.properties
TryUniffiRustAndroid/shared/: build.gradle
iosArtifacts/SharedPackage/: Package.swift
iosArtifacts/SharedPackage/Sources/Shared/: Shared.swift
iosArtifacts/SharedPackage/sharedFFI.xcframework/: Info.plist
shared/: Cargo.toml  uniffi.toml
shared/src/: lib.rs  shared.udl
shared/src/androidBindings/com/example/shared/: shared.kt
shared_klc/: Cargo.toml  uniffi.toml
shared_klc/src/: lib.rs
shared_klc/src/androidBindings/com/example/shared/: shared.kt
shared_klc/src/iosBindings/: sharedFFI.h
uniffi-bindgen/: Cargo.toml
web/: package-lock.json  package.json
web/public/: shared_klc_bg.wasm
web/src/components/: Adder.tsx
web/src/pages/: index.astro
(+10 files in other folders)
