[package]
name = "shared_klc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared_klc"

[dependencies]
uniffi = "0.25.0"
wasm-bindgen = "0.2.87"

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
