[package]
name = "shared_klc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared_klc"

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
reqwest = { version = "0.11.22", features = ["json"] }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
uniffi = { version = "0.25.0", features = ["tokio"] }
tokio = { version = "1.33.0", features = ["full"] }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
